--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "heroku local:start",
+    "start_new": "heroku local:start",
     "super": "supervisor ./bin/www",
-    "start_old": "node ./bin/www"
+    "start": "node ./bin/www"
   },
   "engines": {
     "node": "8.9.1",
